[package]
name = "gnusay"
version = "0.3.0"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "GNU say made using Rust"
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/deadblackclover/gnusay-rust"
repository = "https://github.com/deadblackclover/gnusay-rust"
keywords = ["gnu", "say"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
